fixes overflow/map/cursor hidden

--- a/pywebexec/static/css/style.css
+++ b/pywebexec/static/css/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 .table-container {
     height: 270px;
@@ -41,7 +42,7 @@ select { /* Safari bug */
     border: 1px solid #ccc;
     font-family: monospace;
     border-radius: 10px;
-    overflow-y: none;
+    overflow-y: hidden;
 }
 .copy-icon { cursor: pointer; }
 .monospace { font-family: monospace; }
@@ -156,6 +157,7 @@ body.dimmed * {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+    overflow-y: hidden;
 }
 .dimmer-text {
     color: white;
@@ -165,4 +167,9 @@ body.dimmed * {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.xterm-cursor {
+    display: none;
+    visibility: hidden;
+    height: 0px;
 }
